--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -5,6 +5,7 @@
     <string name="login_password">Kata sandi</string>
 
     <string name="setting_title">Menu utama</string>
+    <string name="setting_widget_settings">Utama widget</string>
     <string name="setting_theme">Tema</string>
     <string name="setting_theme_automatic">Otomatis</string>
     <string name="setting_theme_light">Daylight</string>
