--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
 
     <string name="setting_title">Main menu</string>
     <string name="setting_theme">Themes</string>
+    <string name="setting_widget_settings">Widget Settings</string>
     <string name="setting_theme_automatic">Automatic</string>
     <string name="setting_theme_wallpaper" translatable="false">Wallpaper</string>
     <string name="setting_theme_light">Daylight</string>
